[FIX] line-break instead of ellipisis, make `.nowrap-ellipsis` a global class

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -95,3 +95,9 @@ code {
   white-space: pre-line;
   word-wrap: break-word;
 }
+
+.nowrap-ellipsis {
+  white-space: nowrap;
+  overflow-x: clip;
+  text-overflow: ellipsis;
+}
